<package>
  <name>pi_trees</name>
  <version>0.1.1</version>

  <description>Behavior Trees for ROS</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/pi_trees</url>
  <url type="bugtracker">https://github.com/pirobot/pi_trees/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pi_trees_lib</run_depend>
  <run_depend>pi_trees_ros</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
